--- a/Session_13_Traders_Eat.ipynb
+++ b/Session_13_Traders_Eat.ipynb
@@ -21,20 +21,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ikSl2Mz0m252",
-        "outputId": "56277fa1-aaff-4e79-fba9-bd02fbfdc3fc"
+        "outputId": "e7fd6466-940c-43a2-e3ff-3127307bf3c7"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m21.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m66.4/66.4 KB\u001b[0m \u001b[31m4.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h"
           ]
         }
       ],
@@ -66,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "kg-JVcwzON_b"
       },
@@ -97,7 +100,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "o1EOk5KMnC55"
       },
@@ -127,7 +130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "-oJ35Mx7nXmK"
       },
@@ -165,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "t51BNfwUnt53"
       },
@@ -325,24 +328,24 @@
         "    # 4. Move Agent\n",
         "    self.model.grid.move_agent(self, final_candidates[0])\n",
         "\n",
-        "  def eat(self): \n",
-        "    '''\n",
-        "    Function for trader to consume sugar and spice in grid cell\n",
-        "    '''\n",
-        "    \n",
+        "  def eat(self):\n",
         "    # get sugar\n",
         "    sugar_patch = self.get_sugar(self.pos)\n",
-        "    # eat sugar\n",
-        "    if sugar_patch: \n",
-        "      self.sugar = self.sugar - self.metabolism_sugar + sugar_patch.amount\n",
-        "      sugar_patch.amount = 0\n",
         "\n",
-        "    # get spice\n",
+        "    if sugar_patch:\n",
+        "        self.sugar = self.sugar - self.metabolism_sugar + sugar_patch.amount\n",
+        "        sugar_patch.amount = 0\n",
+        "    else:\n",
+        "        self.sugar -= self.metabolism_sugar\n",
+        "\n",
+        "    # get_spice\n",
         "    spice_patch = self.get_spice(self.pos)\n",
-        "    # eat spice\n",
+        "\n",
         "    if spice_patch:\n",
-        "      self.spice = self.spice - self.metabolism_spice + spice_patch.amount\n",
-        "      spice_patch.amount = 0\n",
+        "        self.spice = self.spice - self.metabolism_spice + spice_patch.amount\n",
+        "        spice_patch.amount = 0\n",
+        "    else:\n",
+        "        self.spice -= self.metabolism_spice\n",
         "\n",
         "  def maybe_die(self):\n",
         "    '''\n",
@@ -368,7 +371,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "7DTonjahn2BT"
       },
