--- a/Session_14_Traders_Trade_part_1.ipynb
+++ b/Session_14_Traders_Trade_part_1.ipynb
@@ -9,7 +9,7 @@
         "wp0VWkylOKr9",
         "BkX5GqjSnAu0"
       ],
-      "authorship_tag": "ABX9TyMEjmq9oqiAy2Yq63YoQZn0",
+      "authorship_tag": "ABX9TyMOo7+AJMNEbNg/okL+r+Zg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,15 +63,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "74961ee9-8e78-4a90-a720-c62fa12a16fa"
+        "outputId": "0eb8a22a-5084-4609-9752-4282a65dcfbf"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m16.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m66.4/66.4 KB\u001b[0m \u001b[31m5.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h"
           ]
         }
       ]
@@ -104,7 +107,7 @@
       "metadata": {
         "id": "kg-JVcwzON_b"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -143,7 +146,7 @@
       "metadata": {
         "id": "o1EOk5KMnC55"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -172,7 +175,7 @@
       "metadata": {
         "id": "-oJ35Mx7nXmK"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -352,24 +355,24 @@
         "    # 4. Move Agent\n",
         "    self.model.grid.move_agent(self, final_candidates[0])\n",
         "\n",
-        "  def eat(self): \n",
-        "    '''\n",
-        "    Function for trader to consume sugar and spice in grid cell\n",
-        "    '''\n",
-        "    \n",
+        "  def eat(self):\n",
         "    # get sugar\n",
         "    sugar_patch = self.get_sugar(self.pos)\n",
-        "    # eat sugar\n",
-        "    if sugar_patch: \n",
-        "      self.sugar = self.sugar - self.metabolism_sugar + sugar_patch.amount\n",
-        "      sugar_patch.amount = 0\n",
         "\n",
-        "    # get spice\n",
+        "    if sugar_patch:\n",
+        "        self.sugar = self.sugar - self.metabolism_sugar + sugar_patch.amount\n",
+        "        sugar_patch.amount = 0\n",
+        "    else:\n",
+        "        self.sugar -= self.metabolism_sugar\n",
+        "\n",
+        "    # get_spice\n",
         "    spice_patch = self.get_spice(self.pos)\n",
-        "    # eat spice\n",
+        "\n",
         "    if spice_patch:\n",
-        "      self.spice = self.spice - self.metabolism_spice + spice_patch.amount\n",
-        "      spice_patch.amount = 0\n",
+        "        self.spice = self.spice - self.metabolism_spice + spice_patch.amount\n",
+        "        spice_patch.amount = 0\n",
+        "    else:\n",
+        "        self.spice -= self.metabolism_spice\n",
         "\n",
         "  def maybe_die(self):\n",
         "    '''\n",
@@ -398,7 +401,7 @@
       "metadata": {
         "id": "t51BNfwUnt53"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -539,7 +542,7 @@
       "metadata": {
         "id": "7DTonjahn2BT"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -558,221 +561,10 @@
         "model.run_model(step_count=1)\n"
       ],
       "metadata": {
-        "id": "at455urSol7b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b90771d3-e25a-44d4-f0b2-21235e88dafc"
+        "id": "at455urSol7b"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1\n",
-            "3\n",
-            "2\n",
-            "2\n",
-            "0\n",
-            "3\n",
-            "3\n",
-            "4\n",
-            "2\n",
-            "0\n",
-            "2\n",
-            "5\n",
-            "1\n",
-            "0\n",
-            "2\n",
-            "1\n",
-            "0\n",
-            "1\n",
-            "0\n",
-            "1\n",
-            "6\n",
-            "3\n",
-            "4\n",
-            "3\n",
-            "3\n",
-            "1\n",
-            "0\n",
-            "1\n",
-            "1\n",
-            "1\n",
-            "2\n",
-            "2\n",
-            "1\n",
-            "8\n",
-            "2\n",
-            "1\n",
-            "5\n",
-            "7\n",
-            "1\n",
-            "6\n",
-            "3\n",
-            "4\n",
-            "4\n",
-            "4\n",
-            "3\n",
-            "0\n",
-            "2\n",
-            "5\n",
-            "6\n",
-            "7\n",
-            "3\n",
-            "6\n",
-            "4\n",
-            "4\n",
-            "0\n",
-            "2\n",
-            "3\n",
-            "2\n",
-            "1\n",
-            "2\n",
-            "1\n",
-            "5\n",
-            "4\n",
-            "3\n",
-            "2\n",
-            "0\n",
-            "4\n",
-            "2\n",
-            "0\n",
-            "0\n",
-            "2\n",
-            "1\n",
-            "7\n",
-            "2\n",
-            "3\n",
-            "5\n",
-            "7\n",
-            "6\n",
-            "0\n",
-            "1\n",
-            "0\n",
-            "9\n",
-            "0\n",
-            "2\n",
-            "4\n",
-            "5\n",
-            "8\n",
-            "2\n",
-            "4\n",
-            "8\n",
-            "0\n",
-            "3\n",
-            "1\n",
-            "7\n",
-            "3\n",
-            "1\n",
-            "1\n",
-            "0\n",
-            "0\n",
-            "1\n",
-            "0\n",
-            "2\n",
-            "7\n",
-            "3\n",
-            "1\n",
-            "5\n",
-            "0\n",
-            "2\n",
-            "2\n",
-            "4\n",
-            "0\n",
-            "7\n",
-            "0\n",
-            "2\n",
-            "3\n",
-            "1\n",
-            "1\n",
-            "0\n",
-            "0\n",
-            "2\n",
-            "3\n",
-            "6\n",
-            "1\n",
-            "1\n",
-            "5\n",
-            "1\n",
-            "2\n",
-            "0\n",
-            "2\n",
-            "7\n",
-            "4\n",
-            "0\n",
-            "2\n",
-            "1\n",
-            "2\n",
-            "4\n",
-            "1\n",
-            "2\n",
-            "2\n",
-            "3\n",
-            "0\n",
-            "0\n",
-            "0\n",
-            "0\n",
-            "0\n",
-            "4\n",
-            "5\n",
-            "1\n",
-            "2\n",
-            "1\n",
-            "4\n",
-            "1\n",
-            "3\n",
-            "2\n",
-            "3\n",
-            "0\n",
-            "2\n",
-            "1\n",
-            "4\n",
-            "1\n",
-            "4\n",
-            "5\n",
-            "1\n",
-            "0\n",
-            "3\n",
-            "2\n",
-            "3\n",
-            "1\n",
-            "0\n",
-            "0\n",
-            "1\n",
-            "1\n",
-            "1\n",
-            "2\n",
-            "0\n",
-            "4\n",
-            "4\n",
-            "1\n",
-            "0\n",
-            "3\n",
-            "3\n",
-            "2\n",
-            "0\n",
-            "5\n",
-            "1\n",
-            "1\n",
-            "2\n",
-            "0\n",
-            "1\n",
-            "4\n",
-            "1\n",
-            "2\n",
-            "1\n",
-            "1\n",
-            "2\n",
-            "5\n",
-            "5\n",
-            "4\n",
-            "5\n",
-            "3\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
