--- a/Session_16_Traders_Trade_part_3.ipynb
+++ b/Session_16_Traders_Trade_part_3.ipynb
@@ -9,7 +9,7 @@
         "wp0VWkylOKr9",
         "BkX5GqjSnAu0"
       ],
-      "authorship_tag": "ABX9TyNqzTqpDKY6KOhAO8IfeO/X",
+      "authorship_tag": "ABX9TyNTTbK49crN2PTx8V407+fi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,15 +63,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ed1a8878-81a6-4b2f-bd1b-08857065091a"
+        "outputId": "bab1c0a6-d43b-483b-8592-4b49e6648cb6"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m14.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m66.4/66.4 KB\u001b[0m \u001b[31m4.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h"
           ]
         }
       ]
@@ -104,7 +107,7 @@
       "metadata": {
         "id": "kg-JVcwzON_b"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -143,7 +146,7 @@
       "metadata": {
         "id": "o1EOk5KMnC55"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -172,7 +175,7 @@
       "metadata": {
         "id": "-oJ35Mx7nXmK"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -441,24 +444,24 @@
         "    # 4. Move Agent\n",
         "    self.model.grid.move_agent(self, final_candidates[0])\n",
         "\n",
-        "  def eat(self): \n",
-        "    '''\n",
-        "    Function for trader to consume sugar and spice in grid cell\n",
-        "    '''\n",
-        "    \n",
+        "  def eat(self):\n",
         "    # get sugar\n",
         "    sugar_patch = self.get_sugar(self.pos)\n",
-        "    # eat sugar\n",
-        "    if sugar_patch: \n",
-        "      self.sugar = self.sugar - self.metabolism_sugar + sugar_patch.amount\n",
-        "      sugar_patch.amount = 0\n",
         "\n",
-        "    # get spice\n",
+        "    if sugar_patch:\n",
+        "        self.sugar = self.sugar - self.metabolism_sugar + sugar_patch.amount\n",
+        "        sugar_patch.amount = 0\n",
+        "    else:\n",
+        "        self.sugar -= self.metabolism_sugar\n",
+        "\n",
+        "    # get_spice\n",
         "    spice_patch = self.get_spice(self.pos)\n",
-        "    # eat spice\n",
+        "\n",
         "    if spice_patch:\n",
-        "      self.spice = self.spice - self.metabolism_spice + spice_patch.amount\n",
-        "      spice_patch.amount = 0\n",
+        "        self.spice = self.spice - self.metabolism_spice + spice_patch.amount\n",
+        "        spice_patch.amount = 0\n",
+        "    else:\n",
+        "        self.spice -= self.metabolism_spice\n",
         "\n",
         "  def maybe_die(self):\n",
         "    '''\n",
@@ -495,7 +498,7 @@
       "metadata": {
         "id": "t51BNfwUnt53"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -636,7 +639,7 @@
       "metadata": {
         "id": "7DTonjahn2BT"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -659,39 +662,52 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "52e230cf-9509-49d8-d33d-30b1acd7bb43"
+        "outputId": "ff858a55-14a2-4126-96b1-19d8ed22d57c"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "True True\n",
+            "False True\n",
+            "False True\n",
             "True True\n",
+            "False True\n",
+            "False True\n",
             "True True\n",
             "True True\n",
             "True True\n",
             "True True\n",
-            "False True\n",
             "True True\n",
             "False True\n",
             "False True\n",
             "True True\n",
+            "False True\n",
             "True True\n",
             "True True\n",
+            "True True\n",
             "False True\n",
             "False True\n",
+            "True True\n",
+            "True True\n",
+            "True True\n",
+            "True True\n",
+            "True True\n",
+            "True True\n",
             "False True\n",
             "False True\n",
             "True True\n",
+            "False True\n",
+            "False True\n",
+            "False True\n",
             "False True\n",
             "True True\n",
             "False True\n",
             "True True\n",
             "True True\n",
             "False True\n",
-            "False True\n",
             "True True\n",
             "False True\n",
             "False True\n",
@@ -701,66 +717,64 @@
             "True True\n",
             "True True\n",
             "True True\n",
-            "True True\n",
-            "False True\n",
             "True True\n",
             "True True\n",
-            "False True\n",
-            "False True\n",
             "True True\n",
             "True True\n",
             "True True\n",
             "False True\n",
-            "True True\n",
             "False True\n",
             "False True\n",
             "True True\n",
-            "False True\n",
             "True True\n",
-            "False True\n",
             "False True\n",
             "True True\n",
             "True True\n",
             "True True\n",
-            "False True\n",
-            "False True\n",
             "True True\n",
             "True True\n",
             "True True\n",
-            "False True\n",
-            "False True\n",
             "True True\n",
             "False True\n",
             "False True\n",
-            "True True\n",
-            "True True\n",
+            "False True\n",
             "True True\n",
             "True True\n",
+            "False True\n",
             "True True\n",
+            "False True\n",
             "False True\n",
+            "False True\n",
             "True True\n",
             "True True\n",
             "True True\n",
             "True True\n",
             "True True\n",
+            "False True\n",
+            "False True\n",
             "True True\n",
             "True True\n",
             "False True\n",
-            "True True\n",
+            "False True\n",
             "True True\n",
+            "False True\n",
             "True True\n",
             "False True\n",
             "True True\n",
+            "False True\n",
             "True True\n",
             "True True\n",
             "True True\n",
-            "False True\n",
             "False True\n",
             "True True\n",
             "True True\n",
+            "False True\n",
+            "False True\n",
             "True True\n",
+            "False True\n",
             "False True\n",
             "True True\n",
+            "False True\n",
             "True True\n",
             "True True\n",
             "True True\n",
@@ -769,23 +783,26 @@
             "True True\n",
             "True True\n",
             "True True\n",
-            "False True\n",
-            "False True\n",
             "True True\n",
             "True True\n",
             "True True\n",
-            "False True\n",
             "True True\n",
             "False True\n",
             "True True\n",
             "True True\n",
+            "False True\n",
+            "False True\n",
             "True True\n",
+            "False True\n",
+            "False True\n",
+            "False True\n",
+            "False True\n",
+            "False True\n",
             "True True\n",
             "True True\n",
             "True True\n",
             "True True\n",
             "True True\n",
-            "False True\n",
             "True True\n",
             "True True\n",
             "True True\n",
@@ -799,12 +816,12 @@
             "False True\n",
             "True True\n",
             "True True\n",
-            "False True\n",
             "True True\n",
             "True True\n",
-            "False True\n",
             "True True\n",
             "True True\n",
+            "True True\n",
+            "False True\n",
             "True True\n",
             "True True\n",
             "True True\n",
@@ -815,21 +832,15 @@
             "True True\n",
             "True True\n",
             "True True\n",
-            "False True\n",
-            "False True\n",
             "True True\n",
             "True True\n",
-            "False True\n",
             "True True\n",
             "True True\n",
             "True True\n",
             "True True\n",
             "False True\n",
-            "True True\n",
-            "True True\n",
             "False True\n",
             "False True\n",
-            "True True\n",
             "True True\n",
             "True True\n",
             "True True\n",
@@ -841,21 +852,28 @@
             "True True\n",
             "True True\n",
             "False True\n",
+            "False True\n",
             "True True\n",
             "True True\n",
-            "False True\n",
             "True True\n",
+            "True True\n",
             "False True\n",
             "True True\n",
+            "False True\n",
             "True True\n",
             "False True\n",
+            "True True\n",
             "True True\n",
             "True True\n",
+            "True True\n",
+            "False True\n",
+            "False True\n",
             "False True\n",
+            "False True\n",
             "True True\n",
             "True True\n",
             "True True\n",
-            "False True\n",
+            "True True\n",
             "True True\n",
             "True True\n",
             "True True\n",
@@ -865,16 +883,28 @@
             "True True\n",
             "True True\n",
             "True True\n",
+            "False True\n",
+            "True True\n",
+            "False True\n",
+            "True True\n",
+            "False True\n",
+            "True True\n",
             "True True\n",
             "True True\n",
             "False True\n",
+            "True True\n",
             "False True\n",
+            "True True\n",
             "False True\n",
             "True True\n",
             "True True\n",
+            "False True\n",
             "False True\n",
             "False True\n",
-            "True True\n"
+            "True True\n",
+            "True True\n",
+            "True True\n",
+            "False True\n"
           ]
         }
       ]
