--- a/Session_13_Traders_Eat.ipynb
+++ b/Session_13_Traders_Eat.ipynb
@@ -21,23 +21,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ikSl2Mz0m252",
-        "outputId": "e7fd6466-940c-43a2-e3ff-3127307bf3c7"
+        "outputId": "02104a58-a88a-42f8-c610-bc2b02905b88"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m21.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m66.4/66.4 KB\u001b[0m \u001b[31m4.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ],
@@ -69,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 6,
       "metadata": {
         "id": "kg-JVcwzON_b"
       },
@@ -100,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 7,
       "metadata": {
         "id": "o1EOk5KMnC55"
       },
@@ -130,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 8,
       "metadata": {
         "id": "-oJ35Mx7nXmK"
       },
@@ -168,7 +165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 10,
       "metadata": {
         "id": "t51BNfwUnt53"
       },
@@ -333,19 +330,17 @@
         "    sugar_patch = self.get_sugar(self.pos)\n",
         "\n",
         "    if sugar_patch:\n",
-        "        self.sugar = self.sugar - self.metabolism_sugar + sugar_patch.amount\n",
+        "        self.sugar += sugar_patch.amount\n",
         "        sugar_patch.amount = 0\n",
-        "    else:\n",
-        "        self.sugar -= self.metabolism_sugar\n",
+        "    self.sugar -= self.metabolism_sugar\n",
         "\n",
         "    # get_spice\n",
         "    spice_patch = self.get_spice(self.pos)\n",
         "\n",
         "    if spice_patch:\n",
-        "        self.spice = self.spice - self.metabolism_spice + spice_patch.amount\n",
+        "        self.spice += spice_patch.amount\n",
         "        spice_patch.amount = 0\n",
-        "    else:\n",
-        "        self.spice -= self.metabolism_spice\n",
+        "    self.spice -= self.metabolism_spice\n",
         "\n",
         "  def maybe_die(self):\n",
         "    '''\n",
@@ -371,7 +366,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 11,
       "metadata": {
         "id": "7DTonjahn2BT"
       },
