--- a/Session_14_Traders_Trade_part_1.ipynb
+++ b/Session_14_Traders_Trade_part_1.ipynb
@@ -9,7 +9,7 @@
         "wp0VWkylOKr9",
         "BkX5GqjSnAu0"
       ],
-      "authorship_tag": "ABX9TyMOo7+AJMNEbNg/okL+r+Zg",
+      "authorship_tag": "ABX9TyNIeaGCYmGk6EmcDLNQG278",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0eb8a22a-5084-4609-9752-4282a65dcfbf"
+        "outputId": "bab5f017-e19f-4954-8e32-17dde2270884"
       },
       "execution_count": 1,
       "outputs": [
@@ -72,8 +72,8 @@
           "name": "stdout",
           "text": [
             "Mounted at /content/drive\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m16.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m66.4/66.4 KB\u001b[0m \u001b[31m5.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m20.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m66.4/66.4 KB\u001b[0m \u001b[31m6.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
@@ -360,19 +360,17 @@
         "    sugar_patch = self.get_sugar(self.pos)\n",
         "\n",
         "    if sugar_patch:\n",
-        "        self.sugar = self.sugar - self.metabolism_sugar + sugar_patch.amount\n",
+        "        self.sugar += sugar_patch.amount\n",
         "        sugar_patch.amount = 0\n",
-        "    else:\n",
-        "        self.sugar -= self.metabolism_sugar\n",
+        "    self.sugar -= self.metabolism_sugar\n",
         "\n",
         "    # get_spice\n",
         "    spice_patch = self.get_spice(self.pos)\n",
         "\n",
         "    if spice_patch:\n",
-        "        self.spice = self.spice - self.metabolism_spice + spice_patch.amount\n",
+        "        self.spice += spice_patch.amount\n",
         "        spice_patch.amount = 0\n",
-        "    else:\n",
-        "        self.spice -= self.metabolism_spice\n",
+        "    self.spice -= self.metabolism_spice\n",
         "\n",
         "  def maybe_die(self):\n",
         "    '''\n",
@@ -401,7 +399,7 @@
       "metadata": {
         "id": "t51BNfwUnt53"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -542,7 +540,7 @@
       "metadata": {
         "id": "7DTonjahn2BT"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": []
     },
     {
