simplify code for eat function updates

--- a/Session_15_Traders_Trade_part_2.ipynb
+++ b/Session_15_Traders_Trade_part_2.ipynb
@@ -9,7 +9,7 @@
         "wp0VWkylOKr9",
         "BkX5GqjSnAu0"
       ],
-      "authorship_tag": "ABX9TyNAQclB6up5w12JnDBmDOvb",
+      "authorship_tag": "ABX9TyM+ay7ou8Rc88BKG8j1ydTI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "83aabf71-35cf-46f2-de42-890b18d412dc"
+        "outputId": "fb08a86e-05b0-4a74-9a34-8257c2b109aa"
       },
       "execution_count": 1,
       "outputs": [
@@ -72,8 +72,8 @@
           "name": "stdout",
           "text": [
             "Mounted at /content/drive\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m17.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m66.4/66.4 KB\u001b[0m \u001b[31m4.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m26.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m66.4/66.4 KB\u001b[0m \u001b[31m3.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
@@ -402,19 +402,17 @@
         "    sugar_patch = self.get_sugar(self.pos)\n",
         "\n",
         "    if sugar_patch:\n",
-        "        self.sugar = self.sugar - self.metabolism_sugar + sugar_patch.amount\n",
+        "        self.sugar += sugar_patch.amount\n",
         "        sugar_patch.amount = 0\n",
-        "    else:\n",
-        "        self.sugar -= self.metabolism_sugar\n",
+        "    self.sugar -= self.metabolism_sugar\n",
         "\n",
         "    # get_spice\n",
         "    spice_patch = self.get_spice(self.pos)\n",
         "\n",
         "    if spice_patch:\n",
-        "        self.spice = self.spice - self.metabolism_spice + spice_patch.amount\n",
+        "        self.spice += spice_patch.amount\n",
         "        spice_patch.amount = 0\n",
-        "    else:\n",
-        "        self.spice -= self.metabolism_spice\n",
+        "    self.spice -= self.metabolism_spice\n",
         "\n",
         "  def maybe_die(self):\n",
         "    '''\n",
@@ -451,7 +449,7 @@
       "metadata": {
         "id": "t51BNfwUnt53"
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -592,7 +590,7 @@
       "metadata": {
         "id": "7DTonjahn2BT"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -611,458 +609,10 @@
         "model.run_model(step_count=1)\n"
       ],
       "metadata": {
-        "id": "at455urSol7b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "d93791da-1a63-4d47-aed7-52f1bab95166"
+        "id": "at455urSol7b"
       },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1.2777159854736435\n",
-            "1.1238282934784083\n",
-            "1.6168312626094614\n",
-            "5.114957546028552\n",
-            "0.6922577404556624\n",
-            "2.647182607523659\n",
-            "0.9287087810503355\n",
-            "1.4586499149789456\n",
-            "0.8890390263595802\n",
-            "0.3273408773880721\n",
-            "1.7252450806292114\n",
-            "1.3374935098492586\n",
-            "2.369197171637523\n",
-            "1.3087829892357683\n",
-            "2.5605315540099207\n",
-            "0.5959340529454379\n",
-            "1.733743090148969\n",
-            "1.5051683163995153\n",
-            "0.44540666449234184\n",
-            "1.624170876011129\n",
-            "2.482188068316112\n",
-            "0.8253755166479786\n",
-            "0.5329082735989145\n",
-            "1.6222142113076254\n",
-            "0.9575009918562866\n",
-            "0.8581163303210332\n",
-            "0.5872987196446599\n",
-            "1.1874864070557392\n",
-            "0.8520410940641455\n",
-            "0.8393720596645176\n",
-            "2.212152124352346\n",
-            "2.066599461272874\n",
-            "2.369197171637523\n",
-            "2.02223801503349\n",
-            "2.2461556494297543\n",
-            "3.9563505102058274\n",
-            "1.5704586174993107\n",
-            "1.2773327473170102\n",
-            "1.1062026082623002\n",
-            "0.7272474743090476\n",
-            "1.458896287738912\n",
-            "1.028747529461972\n",
-            "1.2323907983114324\n",
-            "1.073849688342439\n",
-            "2.066782199902197\n",
-            "0.7791937224739797\n",
-            "4.554993686019202\n",
-            "1.1961999452194811\n",
-            "1.4385038436923616\n",
-            "1.9101781298624687\n",
-            "0.983192080250175\n",
-            "0.8474050024015896\n",
-            "0.5676462121975466\n",
-            "2.0478889182363456\n",
-            "0.8840866447369844\n",
-            "1.4089399073526938\n",
-            "0.9833846930603783\n",
-            "3.676222298720575\n",
-            "2.647182607523659\n",
-            "1.7940621204764011\n",
-            "0.9994627987793899\n",
-            "0.6144308362421702\n",
-            "1.4384466579886748\n",
-            "1.384687793466294\n",
-            "0.7976430338134027\n",
-            "1.1068176778723842\n",
-            "1.4725900524718718\n",
-            "2.02223801503349\n",
-            "1.3087829892357683\n",
-            "0.6338054920158089\n",
-            "0.5586073079920496\n",
-            "0.565072980378311\n",
-            "0.7401253595071228\n",
-            "0.6425480497218318\n",
-            "0.18946618668626836\n",
-            "1.4790992760242359\n",
-            "0.7849246584020589\n",
-            "0.8373093553291634\n",
-            "1.5542150480497916\n",
-            "2.242103259670934\n",
-            "1.635724682853211\n",
-            "1.3506425823329409\n",
-            "1.1526367287968178\n",
-            "1.7416467303484175\n",
-            "1.2619429464123963\n",
-            "1.2802852942928808\n",
-            "0.5717142143214063\n",
-            "1.2777159854736435\n",
-            "2.602082499332666\n",
-            "2.311655251113366\n",
-            "1.0430546308621438\n",
-            "2.051046104663859\n",
-            "0.8135639963592849\n",
-            "1.0090726088123871\n",
-            "1.1466596451673745\n",
-            "0.7702442489446454\n",
-            "0.34288127328211954\n",
-            "0.5491830343619852\n",
-            "0.7976430338134027\n",
-            "1.7082725654122877\n",
-            "1.3654675681726178\n",
-            "0.6093741154045603\n",
-            "1.2467099559583674\n",
-            "0.6912147117775906\n",
-            "1.7616606585441104\n",
-            "1.6519364920004804\n",
-            "0.5857862241641753\n",
-            "1.0947453735687542\n",
-            "1.5051683163995153\n",
-            "0.542564150436444\n",
-            "1.5784747358074793\n",
-            "0.40407693795712973\n",
-            "0.6425480497218318\n",
-            "0.40551750201988135\n",
-            "0.2632873234112343\n",
-            "0.5389192194098384\n",
-            "0.8520410940641455\n",
-            "1.6449566416599486\n",
-            "1.5425013273341408\n",
-            "0.5469798825093284\n",
-            "1.0947453735687542\n",
-            "1.6259391627362754\n",
-            "0.5558221582529238\n",
-            "0.4311582492512881\n",
-            "0.6660472063742038\n",
-            "1.1873597958594038\n",
-            "2.0049351503888992\n",
-            "0.8135639963592849\n",
-            "0.8437491760265977\n",
-            "1.3244443453464798\n",
-            "1.021980647783726\n",
-            "2.089087292165101\n",
-            "0.4939451211354951\n",
-            "1.057857792878824\n",
-            "0.6093741154045603\n",
-            "0.8455737902493804\n",
-            "0.723451397260556\n",
-            "1.6168312626094614\n",
-            "3.292694449033174\n",
-            "0.3985790363616109\n",
-            "0.4438243978059923\n",
-            "0.3553554628831661\n",
-            "0.1599842387824077\n",
-            "0.465440038458647\n",
-            "0.40407693795712973\n",
-            "0.18946618668626836\n",
-            "0.5938693888927343\n",
-            "2.0049351503888992\n",
-            "1.733743090148969\n",
-            "0.6249579110407281\n",
-            "1.5784747358074793\n",
-            "0.465440038458647\n",
-            "0.4670993664969138\n",
-            "2.311655251113366\n",
-            "0.940469435240024\n",
-            "1.321485349677311\n",
-            "2.0291986247835694\n",
-            "1.2036618058738051\n",
-            "0.8278538950873234\n",
-            "1.8757714462371258\n",
-            "1.2036618058738051\n",
-            "4.745368112013916\n",
-            "1.935971879328916\n",
-            "1.1596792518098222\n",
-            "1.1551536286609143\n",
-            "1.743254534561636\n",
-            "1.4844277149883862\n",
-            "1.021980647783726\n",
-            "1.6353243452861925\n",
-            "0.9534267441135568\n",
-            "1.292837411057002\n",
-            "0.8474050024015896\n",
-            "0.45086788894514684\n",
-            "0.7464200272921789\n",
-            "0.5753559617824611\n",
-            "0.38895578360163335\n",
-            "0.6600190987013094\n",
-            "0.9138735334633754\n",
-            "1.3244443453464798\n",
-            "1.0690449676496976\n",
-            "1.1109841197270618\n",
-            "1.2467099559583674\n",
-            "0.7603625848923669\n",
-            "0.6922577404556624\n",
-            "0.39383072416482146\n",
-            "1.4089399073526938\n",
-            "0.6600190987013094\n",
-            "2.482188068316112\n",
-            "0.8278538950873234\n",
-            "3.2637668288410984\n",
-            "1.935971879328916\n",
-            "0.7976035967725704\n",
-            "1.297671228502794\n",
-            "0.8437491760265977\n",
-            "1.0090726088123871\n",
-            "1.1892034740013988\n",
-            "0.7988221618637918\n",
-            "0.7345303831162672\n",
-            "1.292837411057002\n",
-            "0.983192080250175\n",
-            "0.75\n",
-            "1.0176007879499522\n",
-            "0.7252406676228422\n",
-            "2.435532422657966\n",
-            "0.780695725364778\n",
-            "0.7321818254804675\n",
-            "0.4886385687135258\n",
-            "1.028747529461972\n",
-            "0.7702442489446454\n",
-            "0.7988221618637918\n",
-            "0.9077415526644965\n",
-            "0.5606809642135502\n",
-            "0.5273033097637496\n",
-            "0.7791937224739797\n",
-            "0.7049192839688789\n",
-            "0.7596320269225953\n",
-            "0.6249579110407281\n",
-            "0.602956889309278\n",
-            "2.212152124352346\n",
-            "1.3526380260918403\n",
-            "0.6144308362421702\n",
-            "2.2510561093049044\n",
-            "0.9421081642118789\n",
-            "0.9447516095788376\n",
-            "0.780695725364778\n",
-            "0.7605965280666738\n",
-            "1.1749588314184694\n",
-            "1.1873597958594038\n",
-            "2.471686516173569\n",
-            "0.5179697702828122\n",
-            "1.4486700750860648\n",
-            "0.8660254037844386\n",
-            "0.7464200272921789\n",
-            "0.5676462121975466\n",
-            "1.5199125995050868\n",
-            "0.9542036204155938\n",
-            "6.709796384493909\n",
-            "2.347939631425926\n",
-            "1.3232038718022092\n",
-            "0.970725343394151\n",
-            "0.6070807265487914\n",
-            "0.602956889309278\n",
-            "1.843827090828967\n",
-            "1.4757295747452437\n",
-            "0.8890390263595802\n",
-            "0.34364987719368983\n",
-            "1.0477022943947856\n",
-            "0.565072980378311\n",
-            "1.763602596291766\n",
-            "2.4589655605369867\n",
-            "1.0229685461756126\n",
-            "0.5660312837126709\n",
-            "0.9154287120789995\n",
-            "0.608276253029822\n",
-            "1.0313989450177772\n",
-            "1.1260881555906228\n",
-            "0.5717142143214063\n",
-            "1.1238282934784083\n",
-            "0.723451397260556\n",
-            "2.2886885410853175\n",
-            "2.4754688703245953\n",
-            "0.608276253029822\n",
-            "0.392109678533953\n",
-            "1.4725900524718718\n",
-            "1.763602596291766\n",
-            "0.3273408773880721\n",
-            "1.0103651858648603\n",
-            "0.6955737181720193\n",
-            "0.938952955723142\n",
-            "2.2830070547681656\n",
-            "0.8771191362033306\n",
-            "0.4886385687135258\n",
-            "0.7429107458548573\n",
-            "1.2323907983114324\n",
-            "1.0350983390135313\n",
-            "5.125243012973042\n",
-            "2.602082499332666\n",
-            "2.2886885410853175\n",
-            "5.114957546028552\n",
-            "3.292694449033174\n",
-            "2.453266907313291\n",
-            "1.7940621204764011\n",
-            "0.9587943645914634\n",
-            "1.1466596451673745\n",
-            "1.1892034740013988\n",
-            "0.9077415526644965\n",
-            "0.8346835907676013\n",
-            "0.5759403763178709\n",
-            "0.8801982299231393\n",
-            "0.8253755166479786\n",
-            "0.5857862241641753\n",
-            "0.5469798825093284\n",
-            "0.612904702146299\n",
-            "1.5095603262263566\n",
-            "1.384687793466294\n",
-            "1.7082725654122877\n",
-            "2.3704165821938865\n",
-            "1.057857792878824\n",
-            "1.620185174601965\n",
-            "1.9550504398153572\n",
-            "1.1596792518098222\n",
-            "0.7976035967725704\n",
-            "0.6372684764768387\n",
-            "1.1572491474291908\n",
-            "1.092906420717\n",
-            "1.1751393027860062\n",
-            "1.4846888816411394\n",
-            "1.1887411043223048\n",
-            "0.3985790363616109\n",
-            "0.6338054920158089\n",
-            "0.39383072416482146\n",
-            "0.6660472063742038\n",
-            "1.1749588314184694\n",
-            "0.7849246584020589\n",
-            "0.7596320269225953\n",
-            "1.1751393027860062\n",
-            "1.0477022943947856\n",
-            "0.8373093553291634\n",
-            "0.5938693888927343\n",
-            "1.63783393541592\n",
-            "1.0229685461756126\n",
-            "0.8806578034983366\n",
-            "2.0478889182363456\n",
-            "2.5558282541117916\n",
-            "2.5222226592545596\n",
-            "1.4558726652394103\n",
-            "0.970725343394151\n",
-            "1.1726039399558574\n",
-            "1.1646385614101074\n",
-            "0.509851598132339\n",
-            "0.8719588015591674\n",
-            "0.8806578034983366\n",
-            "0.8346835907676013\n",
-            "0.5606809642135502\n",
-            "0.2632873234112343\n",
-            "0.7603625848923669\n",
-            "0.6159640936823204\n",
-            "0.6912147117775906\n",
-            "0.5872987196446599\n",
-            "1.6353243452861925\n",
-            "2.089087292165101\n",
-            "4.102885992735815\n",
-            "1.5445250741592513\n",
-            "1.4586499149789456\n",
-            "2.0291986247835694\n",
-            "5.209880722517277\n",
-            "4.745368112013916\n",
-            "3.2637668288410984\n",
-            "1.9550504398153572\n",
-            "0.3262472620355044\n",
-            "0.3288484773334778\n",
-            "0.3076095835860425\n",
-            "1.4517323726225952\n",
-            "0.9542036204155938\n",
-            "1.0430546308621438\n",
-            "0.5389192194098384\n",
-            "3.4304687641820886\n",
-            "2.485610763889877\n",
-            "1.2802852942928808\n",
-            "1.1260881555906228\n",
-            "5.125243012973042\n",
-            "2.242103259670934\n",
-            "1.2422054275860834\n",
-            "0.4432026302139591\n",
-            "0.6013377943029549\n",
-            "0.7252406676228422\n",
-            "0.5753559617824611\n",
-            "2.5255002000602182\n",
-            "0.5521992504142456\n",
-            "2.312406154251935\n",
-            "6.709796384493909\n",
-            "1.6222142113076254\n",
-            "1.2097167578182677\n",
-            "0.9833846930603783\n",
-            "1.2897258844974993\n",
-            "0.27688746209726917\n",
-            "0.9287087810503355\n",
-            "3.9563505102058274\n",
-            "2.5605315540099207\n",
-            "0.44540666449234184\n",
-            "0.16055459438389727\n",
-            "0.4670993664969138\n",
-            "0.40551750201988135\n",
-            "0.3286335345030997\n",
-            "0.45202248210053037\n",
-            "1.1068176778723842\n",
-            "2.3704165821938865\n",
-            "1.3654675681726178\n",
-            "0.8455737902493804\n",
-            "1.741143000264028\n",
-            "1.1961999452194811\n",
-            "0.40085378965872415\n",
-            "0.5322906474223771\n",
-            "3.8013155617496426\n",
-            "1.2671051872498809\n",
-            "1.1526367287968178\n",
-            "0.5273033097637496\n",
-            "2.066599461272874\n",
-            "1.0978875820671\n",
-            "0.9152594959041955\n",
-            "0.7395733821028215\n",
-            "0.6205546923193432\n",
-            "0.7423074889580903\n",
-            "0.4371265922699275\n",
-            "0.9482798605251253\n",
-            "1.5173918854767834\n",
-            "0.5963855092770747\n",
-            "0.23052734575936354\n",
-            "0.6120413340572634\n",
-            "1.1726039399558574\n",
-            "0.910486412444676\n",
-            "0.6070807265487914\n",
-            "0.4266551675939622\n",
-            "0.4311582492512881\n",
-            "0.7605965280666738\n",
-            "3.676222298720575\n",
-            "1.2897258844974993\n",
-            "1.0350983390135313\n",
-            "1.9584186801366235\n",
-            "1.4558726652394103\n",
-            "0.7537346628814316\n",
-            "0.910486412444676\n",
-            "1.620185174601965\n",
-            "1.4757295747452437\n",
-            "1.4056941260373739\n",
-            "0.5433581647846062\n",
-            "0.3288484773334778\n",
-            "2.312406154251935\n",
-            "1.5199125995050868\n",
-            "1.7320508075688772\n",
-            "1.624170876011129\n",
-            "0.5759403763178709\n",
-            "1.3526380260918403\n",
-            "1.4384466579886748\n",
-            "0.5329082735989145\n",
-            "2.4589655605369867\n",
-            "1.2773327473170102\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
