--- a/Session_16_Traders_Trade_part_3.ipynb
+++ b/Session_16_Traders_Trade_part_3.ipynb
@@ -9,7 +9,7 @@
         "wp0VWkylOKr9",
         "BkX5GqjSnAu0"
       ],
-      "authorship_tag": "ABX9TyNTTbK49crN2PTx8V407+fi",
+      "authorship_tag": "ABX9TyNullvg/Djpzcf+BgsivADu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bab1c0a6-d43b-483b-8592-4b49e6648cb6"
+        "outputId": "1da30d07-fe07-4283-dad1-a4d417751743"
       },
       "execution_count": 1,
       "outputs": [
@@ -72,8 +72,8 @@
           "name": "stdout",
           "text": [
             "Mounted at /content/drive\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m14.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m66.4/66.4 KB\u001b[0m \u001b[31m4.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m26.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m66.4/66.4 KB\u001b[0m \u001b[31m4.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
@@ -449,19 +449,17 @@
         "    sugar_patch = self.get_sugar(self.pos)\n",
         "\n",
         "    if sugar_patch:\n",
-        "        self.sugar = self.sugar - self.metabolism_sugar + sugar_patch.amount\n",
+        "        self.sugar += sugar_patch.amount\n",
         "        sugar_patch.amount = 0\n",
-        "    else:\n",
-        "        self.sugar -= self.metabolism_sugar\n",
+        "    self.sugar -= self.metabolism_sugar\n",
         "\n",
         "    # get_spice\n",
         "    spice_patch = self.get_spice(self.pos)\n",
         "\n",
         "    if spice_patch:\n",
-        "        self.spice = self.spice - self.metabolism_spice + spice_patch.amount\n",
+        "        self.spice += spice_patch.amount\n",
         "        spice_patch.amount = 0\n",
-        "    else:\n",
-        "        self.spice -= self.metabolism_spice\n",
+        "    self.spice -= self.metabolism_spice\n",
         "\n",
         "  def maybe_die(self):\n",
         "    '''\n",
@@ -498,7 +496,7 @@
       "metadata": {
         "id": "t51BNfwUnt53"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -639,7 +637,7 @@
       "metadata": {
         "id": "7DTonjahn2BT"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -658,256 +656,10 @@
         "model.run_model(step_count=1)\n"
       ],
       "metadata": {
-        "id": "at455urSol7b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "ff858a55-14a2-4126-96b1-19d8ed22d57c"
+        "id": "at455urSol7b"
       },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "True True\n",
-            "False True\n",
-            "False True\n",
-            "True True\n",
-            "False True\n",
-            "False True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "False True\n",
-            "False True\n",
-            "True True\n",
-            "False True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "False True\n",
-            "False True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "False True\n",
-            "False True\n",
-            "True True\n",
-            "False True\n",
-            "False True\n",
-            "False True\n",
-            "False True\n",
-            "True True\n",
-            "False True\n",
-            "True True\n",
-            "True True\n",
-            "False True\n",
-            "True True\n",
-            "False True\n",
-            "False True\n",
-            "False True\n",
-            "False True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "False True\n",
-            "False True\n",
-            "False True\n",
-            "True True\n",
-            "True True\n",
-            "False True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "False True\n",
-            "False True\n",
-            "False True\n",
-            "True True\n",
-            "True True\n",
-            "False True\n",
-            "True True\n",
-            "False True\n",
-            "False True\n",
-            "False True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "False True\n",
-            "False True\n",
-            "True True\n",
-            "True True\n",
-            "False True\n",
-            "False True\n",
-            "True True\n",
-            "False True\n",
-            "True True\n",
-            "False True\n",
-            "True True\n",
-            "False True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "False True\n",
-            "True True\n",
-            "True True\n",
-            "False True\n",
-            "False True\n",
-            "True True\n",
-            "False True\n",
-            "False True\n",
-            "True True\n",
-            "False True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "False True\n",
-            "True True\n",
-            "True True\n",
-            "False True\n",
-            "False True\n",
-            "True True\n",
-            "False True\n",
-            "False True\n",
-            "False True\n",
-            "False True\n",
-            "False True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "False True\n",
-            "False True\n",
-            "False True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "False True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "False True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "False True\n",
-            "False True\n",
-            "False True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "False True\n",
-            "False True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "False True\n",
-            "True True\n",
-            "False True\n",
-            "True True\n",
-            "False True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "False True\n",
-            "False True\n",
-            "False True\n",
-            "False True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "False True\n",
-            "True True\n",
-            "False True\n",
-            "True True\n",
-            "False True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "False True\n",
-            "True True\n",
-            "False True\n",
-            "True True\n",
-            "False True\n",
-            "True True\n",
-            "True True\n",
-            "False True\n",
-            "False True\n",
-            "False True\n",
-            "True True\n",
-            "True True\n",
-            "True True\n",
-            "False True\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
