Update agentization of landscape for Mesa 2.0

--- a/Session_5_Agentize_The_Landscape_part_1.ipynb
+++ b/Session_5_Agentize_The_Landscape_part_1.ipynb
@@ -25,28 +25,14 @@
         "!pip install mesa --quiet"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "cCa7pEqXdY82",
-        "outputId": "86c89e7b-866a-4d24-aea3-026a0448e2fe"
+        "id": "cCa7pEqXdY82"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m21.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m66.4/66.4 KB\u001b[0m \u001b[31m3.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "ikSl2Mz0m252"
       },
@@ -71,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "o1EOk5KMnC55"
       },
@@ -79,12 +65,12 @@
       "source": [
         "class Sugar(mesa.Agent):\n",
         "  \"\"\"\n",
-        "  Sugar: \n",
+        "  Sugar:\n",
         "  - contains an amount of sugar\n",
-        "  - grows 1 amount of sugar at each turn \n",
+        "  - grows 1 amount of sugar at each turn\n",
         "  \"\"\"\n",
         "\n",
-        "  def __init__(self, unique_id, model, pos, max_sugar): \n",
+        "  def __init__(self, unique_id, model, pos, max_sugar):\n",
         "    super().__init__(unique_id, model)\n",
         "    self.pos = pos\n",
         "    self.amount = max_sugar\n",
@@ -93,7 +79,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "-oJ35Mx7nXmK"
       },
@@ -101,14 +87,14 @@
       "source": [
         "class Spice(mesa.Agent):\n",
         "  \"\"\"\n",
-        "  Spice: \n",
+        "  Spice:\n",
         "  - contains an amount of spice\n",
         "  - grows 1 amount of spice at each turn\n",
         "  \"\"\"\n",
         "\n",
         "  def __init__(self):\n",
         "    print(\"I am spice\")\n",
-        "  "
+        ""
       ]
     },
     {
@@ -122,15 +108,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "t51BNfwUnt53"
       },
       "outputs": [],
       "source": [
-        "class Trader(mesa.Agent): \n",
+        "class Trader(mesa.Agent):\n",
         "  \"\"\"\n",
-        "  Trader: \n",
+        "  Trader:\n",
         "  - has a metabolism of sugar and spice\n",
         "  - harvest and trade sugar and spice to survive\n",
         "  \"\"\"\n",
@@ -138,7 +124,7 @@
         "\n",
         "  def __init__(self):\n",
         "    print(\"I am Trader\")\n",
-        " \n"
+        "\n"
       ]
     },
     {
@@ -152,7 +138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "7DTonjahn2BT"
       },
@@ -162,30 +148,30 @@
         "  \"\"\"\n",
         "  Manager class to run Sugarscape with Traders\n",
         "  \"\"\"\n",
-        "  \n",
-        "  \n",
+        "\n",
+        "\n",
         "  def __init__(self, width=50,height=50):\n",
-        "    \n",
+        "\n",
         "    #Initiate width and heigh of sugarscape\n",
         "    self.width = width\n",
-        "    self.height = height \n",
-        "    \n",
+        "    self.height = height\n",
+        "\n",
         "    #initiate mesa grid class\n",
         "    self.grid = mesa.space.MultiGrid(self.width, self.height, torus=False)\n",
         "\n",
-        "    #read in landscape file from supplmentary material \n",
+        "    #read in landscape file from supplmentary material\n",
         "    sugar_distribution =np.genfromtxt(\"sugar-map.txt\")\n",
         "    spice_distribution = np.flip(sugar_distribution, 1)\n",
-        "    \n",
+        "\n",
         "    agent_id = 0\n",
-        "    for _,x,y in self.grid.coord_iter():\n",
+        "    for _,(x,y) in self.grid.coord_iter():\n",
         "      max_sugar = sugar_distribution[x,y]\n",
-        "      if max_sugar > 0: \n",
+        "      if max_sugar > 0:\n",
         "        sugar = Sugar(agent_id, self, (x,y), max_sugar)\n",
         "        self.grid.place_agent(sugar, (x,y))\n",
         "        agent_id += 1\n",
         "        print(sugar.unique_id, sugar.pos, sugar.max_sugar)\n",
-        "    \n",
+        "\n",
         "\n"
       ]
     },
