Update agentization of landscape for Mesa 2.0

--- a/Session_7_Initialize_Traders.ipynb
+++ b/Session_7_Initialize_Traders.ipynb
@@ -27,9 +27,9 @@
       },
       "outputs": [],
       "source": [
-        "try: \n",
+        "try:\n",
         "  import mesa\n",
-        "except: \n",
+        "except:\n",
         "  !pip install mesa --quiet\n",
         "import mesa\n",
         "import numpy as np\n",
@@ -58,12 +58,12 @@
       "source": [
         "class Sugar(mesa.Agent):\n",
         "  \"\"\"\n",
-        "  Sugar: \n",
+        "  Sugar:\n",
         "  - contains an amount of sugar\n",
-        "  - grows 1 amount of sugar at each turn \n",
+        "  - grows 1 amount of sugar at each turn\n",
         "  \"\"\"\n",
         "\n",
-        "  def __init__(self, unique_id, model, pos, max_sugar): \n",
+        "  def __init__(self, unique_id, model, pos, max_sugar):\n",
         "    super().__init__(unique_id, model)\n",
         "    self.pos = pos\n",
         "    self.amount = max_sugar\n",
@@ -80,7 +80,7 @@
       "source": [
         "class Spice(mesa.Agent):\n",
         "  \"\"\"\n",
-        "  Spice: \n",
+        "  Spice:\n",
         "  - contains an amount of spice\n",
         "  - grows 1 amount of spice at each turn\n",
         "  \"\"\"\n",
@@ -90,7 +90,7 @@
         "    self.pos = pos\n",
         "    self.amount = max_spice\n",
         "    self.max_spice = max_spice\n",
-        "  "
+        ""
       ]
     },
     {
@@ -110,16 +110,16 @@
       },
       "outputs": [],
       "source": [
-        "class Trader(mesa.Agent): \n",
+        "class Trader(mesa.Agent):\n",
         "  \"\"\"\n",
-        "  Trader: \n",
+        "  Trader:\n",
         "  - has a metabolism of sugar and spice\n",
         "  - harvest and trade sugar and spice to survive\n",
         "  \"\"\"\n",
         "\n",
         "\n",
-        "  def __init__(self, unique_id, model, pos, moore=False, sugar=0, \n",
-        "               spice=0, metabolism_sugar=0, metabolism_spice=0, \n",
+        "  def __init__(self, unique_id, model, pos, moore=False, sugar=0,\n",
+        "               spice=0, metabolism_sugar=0, metabolism_spice=0,\n",
         "               vision=0):\n",
         "    super().__init__(unique_id, model)\n",
         "    self.pos = pos\n",
@@ -129,7 +129,7 @@
         "    self.metabolism_sugar = metabolism_sugar\n",
         "    self.metabolism_spice = metabolism_spice\n",
         "    self.vision = vision\n",
-        " \n"
+        "\n"
       ]
     },
     {
@@ -153,15 +153,15 @@
         "  \"\"\"\n",
         "  Manager class to run Sugarscape with Traders\n",
         "  \"\"\"\n",
-        "  \n",
-        "  \n",
+        "\n",
+        "\n",
         "  def __init__(self, width=50,height=50, initial_population=200,\n",
         "               endowment_min=25, endowment_max=50, metabolism_min=1,\n",
         "               metabolism_max=5, vision_min=1, vision_max=5):\n",
-        "    \n",
+        "\n",
         "    #Initiate width and heigh of sugarscape\n",
         "    self.width = width\n",
-        "    self.height = height \n",
+        "    self.height = height\n",
         "    #Initiate population attributes\n",
         "    self.initial_population = initial_population\n",
         "    self.endowment_min = endowment_min\n",
@@ -172,29 +172,29 @@
         "    self.vision_max = vision_max\n",
         "\n",
         "    #initiate activation schedule\n",
-        "    self.schedule = mesa.time.RandomActivationByType(self)    \n",
+        "    self.schedule = mesa.time.RandomActivationByType(self)\n",
         "    #initiate mesa grid class\n",
         "    self.grid = mesa.space.MultiGrid(self.width, self.height, torus=False)\n",
         "\n",
-        "    #read in landscape file from supplmentary material \n",
+        "    #read in landscape file from supplmentary material\n",
         "    sugar_distribution =np.genfromtxt(\"sugar-map.txt\")\n",
         "    spice_distribution = np.flip(sugar_distribution, 1)\n",
-        "    \n",
+        "\n",
         "    agent_id = 0\n",
-        "    for _,x,y in self.grid.coord_iter():\n",
+        "    for _,(x,y) in self.grid.coord_iter():\n",
         "      max_sugar = sugar_distribution[x,y]\n",
-        "      if max_sugar > 0: \n",
+        "      if max_sugar > 0:\n",
         "        sugar = Sugar(agent_id, self, (x,y), max_sugar)\n",
         "        self.schedule.add(sugar)\n",
         "        self.grid.place_agent(sugar, (x,y))\n",
         "        agent_id += 1\n",
-        "    \n",
+        "\n",
         "      max_spice = spice_distribution[x,y]\n",
-        "      if max_spice > 0: \n",
+        "      if max_spice > 0:\n",
         "        spice = Spice(agent_id, self, (x,y), max_spice)\n",
         "        self.schedule.add(spice)\n",
         "        self.grid.place_agent(spice, (x,y))\n",
-        "        agent_id += 1    \n",
+        "        agent_id += 1\n",
         "\n",
         "    for i in range(self.initial_population):\n",
         "      #get agent position\n",
@@ -210,14 +210,14 @@
         "      #give agents vision\n",
         "      vision = int(self.random.uniform(self.vision_min, self.vision_max+1))\n",
         "      #create Trader object\n",
-        "      trader = Trader(agent_id, \n",
+        "      trader = Trader(agent_id,\n",
         "                      self,\n",
         "                      (x,y),\n",
-        "                      moore = False, \n",
-        "                      sugar = sugar, \n",
-        "                      spice = spice, \n",
-        "                      metabolism_sugar = metabolism_sugar, \n",
-        "                      metabolism_spice = metabolism_spice, \n",
+        "                      moore = False,\n",
+        "                      sugar = sugar,\n",
+        "                      spice = spice,\n",
+        "                      metabolism_sugar = metabolism_sugar,\n",
+        "                      metabolism_spice = metabolism_spice,\n",
         "                      vision = vision)\n",
         "      #place agent\n",
         "      self.grid.place_agent(trader, (x,y))\n",
